--- a/api/.htaccess
+++ b/api/.htaccess
@@ -1,5 +1,10 @@
-RewriteEngine On
-RewriteBase /ecommerce/
+#Ajustar el DocumentRoot y el Directory a C:/xampp/htdocs/ecommerce
 
-# Redirigir desde /ecommerce/api/ a /api/
-RewriteRule ^(.*)$ /api/$1 [L,R=301]
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    RewriteBase /api/
+    RewriteRule ^index\.php$ - [L]
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule . /api/index.php [L]
+</IfModule>
