--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "core-js": "^3.8.3",
+    "dotenv": "^16.3.1",
     "vue": "^3.4.7",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3",
