--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,13 @@
     "axios": "^1.6.5",
     "core-js": "^3.8.3",
     "dotenv": "^16.3.1",
+    "moment": "^2.30.1",
+    "vee-validate": "^4.12.5",
     "vue": "^3.4.7",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
