Se termina sistema de registro y login, se mejora la vista del navbar y se crea vista de cuenta

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,7 @@
-API_URL=http://localhost:80/api
+VUE_APP_API_BASE_URL=http://localhost/api
+VUE_APP_ENDPOINT_SESSION=${VUE_APP_API_BASE_URL}/session
+VUE_APP_ENDPOINT_USUARIOS=${VUE_APP_API_BASE_URL}/usuarios
+VUE_APP_ENDPOINT_PRODUCTOS=${VUE_APP_API_BASE_URL}/productos
+
+VUE_APP_API_USER_ROOT=admin
+VUE_APP_API_PASSWORD_ROOT=admin
