--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.main.banner-mode=off
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
 spring.datasource.username=heri
-spring.datasource.password=Heriberto1995**
+spring.datasource.password=Hersac251095**
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
