--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -10,8 +10,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>demo</name>
-	<description>Spring Boot + Checkstyle 11.0 Example</description>
+	<name>Ecommerce</name>
+	<description>Proyecto Ecommerce Backend Spring Boot 3.3.4 con PostgreSQL 42.7.8</description>
 
 	<properties>
 		<java.version>21</java.version>
@@ -20,7 +20,7 @@
 		<maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
 		<maven.surefire.plugin.version>3.2.5</maven.surefire.plugin.version>
 		<maven.checkstyle.plugin.version>3.3.1</maven.checkstyle.plugin.version>
-		<checkstyle.version>11.0</checkstyle.version>
+		<checkstyle.version>11.0.0</checkstyle.version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -108,6 +108,23 @@
 						<phase>verify</phase>
 						<goals>
 							<goal>check</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>io.spring.javaformat</groupId>
+				<artifactId>spring-javaformat-maven-plugin</artifactId>
+				<version>0.0.41</version>
+				<executions>
+					<execution>
+						<phase>validate</phase>
+						<goals>
+							<goal>validate</goal>
 						</goals>
 					</execution>
 				</executions>
